WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176552
[Curl] Bug fix for synchronous transfer
https://bugs.webkit.org/show_bug.cgi?id=176552
Summary
[Curl] Bug fix for synchronous transfer
Basuke Suzuki
Reported
2017-09-07 12:05:14 PDT
ResourceHandleInternal::m_delegate is null when synchronous transfer invokes. It should be set to an instance of ResourceHandleCurlDelegate. Also the callbacks to be called when transfer complete is wrong.
Attachments
fix
(8.75 KB, patch)
2017-09-07 16:12 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
fix2
(8.75 KB, patch)
2017-09-07 16:29 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
fix3
(8.72 KB, patch)
2017-09-07 16:35 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2017-09-07 16:12:50 PDT
Created
attachment 320201
[details]
fix
Build Bot
Comment 2
2017-09-07 16:15:10 PDT
Attachment 320201
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:11: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Basuke Suzuki
Comment 3
2017-09-07 16:29:54 PDT
Created
attachment 320204
[details]
fix2
Build Bot
Comment 4
2017-09-07 16:32:43 PDT
Attachment 320204
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:11: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Basuke Suzuki
Comment 5
2017-09-07 16:35:40 PDT
Created
attachment 320205
[details]
fix3
WebKit Commit Bot
Comment 6
2017-09-13 16:33:59 PDT
Comment on
attachment 320205
[details]
fix3 Clearing flags on attachment: 320205 Committed
r221999
: <
http://trac.webkit.org/changeset/221999
>
WebKit Commit Bot
Comment 7
2017-09-13 16:34:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug