[Curl] Bug fix for synchronous transfer https://bugs.webkit.org/show_bug.cgi?id=176552

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2017-09-13
Reviewed by Alex Christensen.

ResourceHandleInternal::m_delegate is null when transfer is synchronous. It should be set ResourceHandleCurlDelegate.
Also the callback functions called when transfer is completed is wrong.

* platform/network/curl/ResourceHandleCurl.cpp:
(WebCore::ResourceHandle::platformLoadResourceSynchronously):
* platform/network/curl/ResourceHandleCurlDelegate.cpp:
(WebCore::ResourceHandleCurlDelegate::dispatchSynchronousJob):
(WebCore::ResourceHandleCurlDelegate::notifyFinish):
(WebCore::ResourceHandleCurlDelegate::notifyFail):
(WebCore::ResourceHandleCurlDelegate::didReceiveHeader):
(WebCore::ResourceHandleCurlDelegate::didReceiveData):
(WebCore::ResourceHandleCurlDelegate::willSendData):

Canonical link: https://commits.webkit.org/193333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221999 268f45cc-cd09-0410-ab3c-d52691b4dbfc